--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "strictFunctionTypes": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "noImplicitThis": true,
     "noFallthroughCasesInSwitch": true
   },
