--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "license": "MPL-2.0",
   "devDependencies": {
     "@types/node": "^24.5.2",
+    "json5": "^2.2.3",
+    "jsonschema": "^1.5.0",
+    "jszip": "^3.10.1",
     "prettier": "^3.6.2",
     "tsup": "^8.5.0",
     "typescript": "^5.9.2"
