:fire: chore: split into multiple packages
Signed-off-by: FurryR <awathefox@gmail.com>

--- a/package.json
+++ b/package.json
@@ -32,14 +32,12 @@
   "keywords": [
     "scratch",
     "blocks",
-    "compiler",
-    "serializer",
+    "parser",
     "script",
     "fuse"
   ],
   "files": [
     "dist",
-    "bin",
     "LICENSE",
     "README.md"
   ]
