:sparkles: feat(ci): add lsp trigger
Signed-off-by: FurryR <awathefox@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,7 @@ jobs:
             "scratch-fuse/compiler"
             "scratch-fuse/serializer"
             "scratch-fuse/builtins"
+            "scratch-fuse/lsp"
           )
 
           for repo in "${REPOS[@]}"; do
